# libseccomp

./: .gitignore  .mailmap  .travis.yml  CHANGELOG  CONTRIBUTING.md  CREDITS  Makefile  Makefile.am  README  README.md  RELEASE_PROCESS.md  SECURITY.md  SUBMITTING_PATCHES  SUBMITTING_PATCHES.md  autogen.sh  configure  configure.ac  configure.mk  install.mk  libseccomp.pc.in  macros.mk  mkdocs.yml  version_info  version_info.mk
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: codeql-analysis.yml  continuous-integration.yml  doxygen.yml  python-ci.yml
doc/: Doxygen  Makefile  Makefile.am  credits_updater
doc/admin/: MAINTAINER_PROCESS.md  RELEASE_PROCESS.md
doc/man/man1/: scmp_sys_resolver.1  scmp_sys_resolver.1.md
doc/man/man3/: seccomp_api_get.3  seccomp_api_get.3.md  seccomp_api_set.3  seccomp_api_set.3.md  seccomp_arch_add.3  seccomp_arch_add.3.md  seccomp_arch_remove.3.md  seccomp_attr_get.3.md  seccomp_attr_set.3  seccomp_attr_set.3.md  seccomp_export_bpf.3  seccomp_export_bpf.3.md  seccomp_export_pfc.3.md  seccomp_gen_bpf.3  seccomp_gen_pfc.3  seccomp_init.3  seccomp_init.3.md  seccomp_load.3  seccomp_load.3.md  seccomp_merge.3  seccomp_merge.3.md  seccomp_notif_alloc.3  seccomp_notif_id_valid.3  seccomp_notify_addfd.3  seccomp_notify_alloc.3  seccomp_notify_alloc.3.md  seccomp_notify_fd.3.md  seccomp_notify_respond.3  seccomp_precompute.3  seccomp_release.3  seccomp_release.3.md  seccomp_reset.3.md  seccomp_rule_add.3  seccomp_rule_add.3.md  seccomp_rule_add_array.3.md  seccomp_syscall_priority.3  seccomp_syscall_priority.3.md  seccomp_syscall_resolve_name.3  seccomp_syscall_resolve_name.3.md  seccomp_syscall_resolve_name_arch.3.md  (+3 more)
include/: Makefile  Makefile.am  seccomp-kvers.h  seccomp-syscalls.h  seccomp.h  seccomp.h.in  seccomp_filter.h
m4/: ax_code_coverage.m4
src/: .gitignore  Makefile  Makefile.am  api.c  arch-aarch64-syscalls.c  arch-aarch64.c  arch-aarch64.h  arch-alpha.c  arch-alpha.h  arch-arm-syscalls.c  arch-arm.c  arch-arm.h  arch-build-kver-tables.py  arch-create-syscalls-csv.py  arch-gperf-generate  arch-i386-syscalls.c  arch-i386.c  arch-i386.h  arch-loongarch64.c  arch-loongarch64.h  arch-m68k.c  arch-m68k.h  arch-mips-syscalls.c  arch-mips.c  arch-mips.h  arch-mips64-syscalls.c  arch-mips64.c  arch-mips64.h  arch-mips64n32-syscalls.c  arch-mips64n32.c  arch-mips64n32.h  arch-parisc-syscalls.c  arch-parisc.c  arch-parisc.h  arch-parisc64-syscalls.c  arch-parisc64.c  arch-parisc64.h  arch-ppc-syscalls.c  arch-ppc.c  arch-ppc.h  (+68 more)
src/python/: .gitignore  MANIFEST.in  Makefile  Makefile.am  libseccomp.pxd  pyproject.toml  seccomp.pyx  setup.py  setup.py.in
tests/: .gitignore  01-allow.c  01-allow.tests  01-basic.c  01-sim-allow.c  01-sim-allow.py  01-sim-allow.tests  02-basic-pfc.c  02-basic.c  02-basic.tests  02-sim-basic.c  02-sim-basic.py  02-sim-basic.tests  03-basic-chains.c  03-basic-chains.py  03-basic-chains.tests  03-chains-pfc.c  03-sim-basic_chains.c  03-sim-basic_chains.py  03-sim-basic_chains.tests  04-chains-bpf.c  04-multilevel-chains.c  04-multilevel-chains.tests  04-sim-multilevel_chains.c  04-sim-multilevel_chains.py  04-sim-multilevel_chains.tests  05-long-jumps.c  05-long-jumps.py  05-long-jumps.tests  05-sim-long_jumps.c  05-sim-long_jumps.py  05-sim-long_jumps.tests  06-actions.c  06-actions.tests  06-sim-actions.c  06-sim-actions.py  06-sim-actions.tests  07-db-bug-looping.c  07-db-bug-looping.tests  07-sim-db_bug_looping.c  (+232 more)
tests/rust/: 01-sim-allow.rs  02-sim-basic.rs  04-sim-multilevel_chains.rs  05-sim-long_jumps.rs  06-sim-actions.rs  07-sim-db_bug_looping.rs  08-sim-subtree_checks.rs  09-sim-syscall_priority_pre.rs  10-sim-syscall_priority_post.rs  11-basic-basic_errors.rs  12-sim-basic_masked_ops.rs  13-basic-attrs.rs  14-sim-reset.rs  15-basic-resolver.rs  16-sim-arch_basic.rs  17-sim-arch_merge.rs  19-sim-missing_syscalls.rs  20-live-basic_die.rs  21-live-basic_allow.rs  22-sim-basic_chains_array.rs  23-sim-arch_all_le_basic.rs  24-live-arg_allow.rs  25-sim-multilevel_chains_adv.rs  26-sim-arch_all_be_basic.rs  27-sim-bpf_blk_state.rs  28-sim-arch_x86.rs  29-sim-pseudo_syscall.rs  30-sim-socket_syscalls.rs  31-basic-version_check.rs  32-live-tsync_allow.rs  33-sim-socket_syscalls_be.rs  34-sim-basic_denylist.rs  35-sim-negative_one.rs  36-sim-ipc_syscalls.rs  37-sim-ipc_syscalls_be.rs  38-basic-pfc_coverage.rs  39-basic-api_level.rs  40-sim-log.rs  41-sim-syscall_priority_arch.rs  42-sim-adv_chains.rs  (+20 more)
tools/: .gitignore  Makefile  Makefile.am  bpf.h  bpf_disasm.c  bpf_sim.c  check-syntax  scmp_api_level.c  scmp_app_inspector  scmp_arch_detect.c  scmp_arch_resolver.c  scmp_bpf_disasm.c  scmp_bpf_sim.c  scmp_populate_syscalls_csv.py  scmp_run.c  scmp_sys_resolver.c  sys_inspector  sys_resolver  sys_resolver.c  util.c  util.h
